--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">TENTANG</a></li>
             <li><a href="#">SKILL</a></li> 
             <li><a href="#">PORTFOLIO</a></li> 
             <li><a href="#">TEAM</a></li> 
             <li><a href="#">BLOG</a></li> 
-            <li><a href="#">CONTACT</a></li> 
+            <li><a href="#">KONTAK</a></li> 
           </ul>
         </div>
       </nav>
       <div class="header__content text-center">
-        <span class="header__content__block">HELLO</span>
-        <h1 class="header__content__title">I'M JOHNNY D. DORSCH</h1>
+        <span class="header__content__block">Assalamualaikum Gays</span>
+        <h1 class="header__content__title">I'M Shidran Fijar</h1>
         <ul class="header__content__sub-title">
           <li>UI&#47;UX DESIGNER <span class="padding">&#45;</span></li>
           <li>WEB DEVELOPER <span class="padding">&#45;</span></li>
-          <li>PHOTOGRAPHAR</li>
+          <li>PHOTOGRAPHY</li>
         </ul>
-        <a class="header__button" href="#">HAVE PROJECT? LET'S TALK</a>
+        <a class="header__button" href="https">CHAT ME</a>
       </div>
       <div class="social-icon pull-right">
         <ul>
@@ -62,7 +62,7 @@
       <div class="page-section">
         <h2 class="page-section__title">ABOUT ME</h2>
           <img class="page-section__title-style" src="assets/images/title-style.png" alt="">
-          <p class="page-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+          <p class="page-section__paragraph">Perkenalkan nama Saya Muhammad Shidran Fijar Ramadhan dan saya berumur 20 tahun. Dengan sifat saya yang ramah dan dapat berkerja secara mandiri maupun dalam tim, saya yakin dapat berkontribusi dengan Perkerjaan manapun.</p>
           <div class="row gutters-80">
             <div class="col-md-4">
               <div class="about__image">
@@ -70,15 +70,16 @@
               </div>
             </div>
             <div class="col-md-8 about__content">
-              <p class="about__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+              <p class="about__description">seorang developer web, Coder, Web design yang baru belajar untuk membangun sebuah pengalaman.
+                Cybershopingg adalah perusahaan fashion yang di buat oleh Shidran fijar. Membangun bisnis dari awal hingga saat ini telah terbangun usaha yang dinamis.</p>
               <div class="row row--margin-top">
                 <div class="col-md-4">
-                  <p class="about__bio"><strong>NAME :</strong> Jonny D. Dorsch</p>
-                  <p class="about__bio"><strong>AGE :</strong> 21</p>
+                  <p class="about__bio"><strong>NAME :</strong> Shidran Fijar</p>
+                  <p class="about__bio"><strong>AGE :</strong> 20</p>
                 </div>
                 <div class="col-md-4">
-                  <p class="about__bio"><strong>JOB TITLE :</strong> UI&#47;UX Designer</p>
-                  <p class="about__bio"><strong>LOCATION :</strong> California,USA</p>
+                  <p class="about__bio"><strong>JOB TITLE :</strong> UI&#47;UX Designer, Web Design,</p>
+                  <p class="about__bio"><strong>LOCATION :</strong> Bogor, Jawa Barat</p>
                 </div>
               </div>
               <div class="row">
@@ -627,7 +628,7 @@
   <footer class="footer footer--bg">
     <div class="container text-center">
       <h1 class="footer__title">OBELA</h1>
-      <ul class="footer__contact-information">
+      <ul class="footer__kontak-information">
         <li><a href="tel:5555555555"><i class="material-icons">phone</i> Hotline (+123) 45 67 89 21</a></li>
         <li><a href="mailto:sshariar458@gmail.com"><i class="material-icons">email</i> sshahriar458@gmail.com</a></li>
         <li><a href="#"><i class="material-icons">location_on</i> DartThemes address goes here.</a></li>
