--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
               </div>
               <div class="row">
                 <div class="col-md-4">
-                  <a class="button button--colorful button--margin" href="#">DOWNLOAD CV</a>
+                  <a class="button button--colorful button--margin" href="https://www.instagram.com/cyberridho/?hl=id">I AM HERE</a>
                 </div>
                 <div class="col-md-4">
-                  <a class="button button--colorful button--margin" href="#">HIRE ME</a>
                 </div>
               </div>
             </div>
@@ -101,14 +100,14 @@
       <div class="page-section">
         <h2 class="page-section__title page-section__title--white">MY SKILL</h2>
         <img class="page-section__title-style" src="assets/images/title-style-white.png" alt="">
-        <p class="page-section__paragraph page-section__paragraph--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class="page-section__paragraph page-section__paragraph--white"></p>
         <div class="row gutters-60">
           <div class="col-md-4">
             <div class="thumbnail text-center">
               <img src="assets/images/adobe-photoshop.png" alt="">
               <h4 class="skill__single-part__title">ADOBE PHOTOSHOP</h4>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width:80%;background-color: #7FB7FA;">
+                <div class="progress-bar" role="progressbar" style="width:55%;background-color: #7FB7FA;">
                 </div>
               </div>
             </div>
@@ -116,9 +115,9 @@
           <div class="col-md-4">
             <div class="thumbnail text-center">
               <img src="assets/images/adobe-illustrator.png" alt="">
-              <h4 class="skill__single-part__title">ADOBE PHOTOSHOP</h4>
+              <h4 class="skill__single-part__title">COREL DRAW</h4>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width:80%;background-color: #FFAC1B;;">
+                <div class="progress-bar" role="progressbar" style="width:75%;background-color: #FFAC1B;;">
                 </div>
               </div>
             </div>
@@ -126,9 +125,9 @@
           <div class="col-md-4">
             <div class="thumbnail text-center">
               <img src="assets/images/adobe-after-effects.png" alt="">
-              <h4 class="skill__single-part__title">ADOBE PHOTOSHOP</h4>
+              <h4 class="skill__single-part__title">VISUAL STUDIO CODE</h4>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width:80%;background-color: #C99AFF;">
+                <div class="progress-bar" role="progressbar" style="width:85%;background-color: #C99AFF;">
                 </div>
               </div>
             </div>
@@ -148,14 +147,14 @@
           <div class="col-md-4">
             <div class="thumbnail text-center">
               <img src="assets/images/logo-design.png" alt="">
-              <h4 class="service__single-section__title">LOGO DESIGN</h4>
+              <h4 class="service__single-section__title">HTML</h4>
               <p class="service__single-section__paragraph">magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="thumbnail text-center">
               <img src="assets/images/website-design.png" alt="">
-              <h4 class="service__single-section__title">WEBSITE DESIGN</h4>
+              <h4 class="service__single-section__title">WEB DESIGN</h4>
               <p class="service__single-section__paragraph">magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
           </div>
@@ -628,7 +627,7 @@
   <footer class="footer footer--bg">
     <div class="container text-center">
       <h1 class="footer__title">OBELA</h1>
-      <ul class="footer__kontak-information">
+      <ul class="footer__KONTAK-information">
         <li><a href="tel:5555555555"><i class="material-icons">phone</i> Hotline (+123) 45 67 89 21</a></li>
         <li><a href="mailto:sshariar458@gmail.com"><i class="material-icons">email</i> sshahriar458@gmail.com</a></li>
         <li><a href="#"><i class="material-icons">location_on</i> DartThemes address goes here.</a></li>
