--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span> 
           </button>
-          <a class="navbar-brand" href="#">OBELA</a>
+          <a class="navbar-brand" href="#">MEINE ARGA</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -307,7 +307,7 @@
 
   <footer class="footer footer--bg">
     <div class="container text-center">
-      <h1 class="footer__title">SHIDRAN</h1>
+      <h1 class="footer__title">MEINE ARGA</h1>
       <ul class="footer__KONTAK-information">
         <li><a href="tel:5555555555"><i class="material-icons">phone</i> Hotline (+62) 85773870553</a></li>
         <li><a href="mailto:sshariar458@gmail.com"><i class="material-icons">email</i> cyberridho0701@gmail.com</a></li>
