--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
       <div class="header__content text-center">
         <span class="header__content__block">Hello!</span>
-        <h1 class="header__content__title">I'M Shidran Fijar</h1>
+        <h1 class="header__content__title">I'm Shidran Fijar</h1>
         <ul class="header__content__sub-title">
           <li>UI&#47;UX DESIGNER <span class="padding">&#45;</span></li>
           <li>WEB DEVELOPER <span class="padding">&#45;</span></li>
